# Sobol

./: README.md  benchmarks.cpp  constants.hpp  generate_header.py  generate_points.cpp  generate_random_points.cpp  meson.build  sobol.hpp  tester.cpp  testsuite.cpp
subprojects/: stokhos.wrap
